# AtlasMTL

./: .gitignore  AGENTS.md  README.md  pyproject.toml
atlasmtl/: __init__.py
atlasmtl/core/: __init__.py  api.py  data.py  evaluate.py  model.py  predict.py  predict_utils.py  runtime.py  train.py  types.py
atlasmtl/io/: __init__.py  writeback.py
atlasmtl/mapping/: __init__.py  calibration.py  confidence.py  hierarchy.py  knn.py  openset.py  reranker.py  weight_policy.py
atlasmtl/models/: __init__.py  checksums.py  manifest.py  (+3 more)
benchmark/: README.md  protocol.md
data_registry/: README.md  benchmark_scenario_registry_2026-03-03.md  cleaning_checklist.md  datasets.md  query_data_inventory_2026-03-03.md  reference_data_inventory_2026-03-03.md
notebooks/: README.md
plan/: 2026-02-28_atlasmtl_optimization_roadmap.md  2026-02-28_exec.md  2026-02-28_plan.md  2026-03-01_preprocessing_layer_execution_plan.md  2026-03-02_paper_grade_benchmark_plan.md  2026-03-04_second_wave_scaleout_benchmark_plan.md  2026-03-05_formal_third_wave_hlca_train10k_predict5k_plan.md  2026-03-06_formal_third_wave_scaling_plan.md  2026-03-06_scanvi_param_lock_benchmark_plan.md  2026-03-07_atlasmtl_param_lock_benchmark_plan.md  2026-03-09_fifth_round_formal_atlasmtl_refresh_plan.md  2026-03-09_fourth_round_atlasmtl_optimization_execution_plan.md  2026-03-09_fourth_round_atlasmtl_optimization_plan.md  2026-03-09_sixth_round_multilevel_annotation_benchmark_plan.md  2026-03-09_sixth_round_multilevel_annotation_benchmark_v2_weighted_gpu_plan.md
scripts/: predict_atlasmtl.py  train_atlasmtl.py
(+1044 files in other folders)
