[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlasmtl"
version = "0.1.0"
description = "Reference-aware multi-task single-cell annotation with coordinate prediction"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "atlasmtl team"}]
license = {text = "MIT"}
dependencies = [
  "torch>=2.0.0",
  "numpy>=1.24.0",
  "pandas>=1.5.0",
  "scanpy>=1.9.0",
  "anndata>=0.9.0",
  "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "black>=22.0.0",
  "flake8>=4.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["atlasmtl*"]

[tool.setuptools.package-data]
"atlasmtl.resources.gene_id" = ["*.md", "*.tsv.gz"]
